# pxygen

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  README.zh.md  TODO.md  notes.md  pyproject.toml
.agents/skills/release/: SKILL.md
.agents/skills/test/: SKILL.md
.claude/: version-management.md
.github/workflows/: ci.yml  release.yml
docs/: changelog.md  dev-testing.md  handoff.md  installation.md  usage.md
docs/reference/: resolve-scripting-api.txt
presets/: burn-in-vertical.xml
presets/archive/: burn-in.xml
src/davinci_proxy_generator/: __main__.py  cli.py  modes.py  organize.py  paths.py  plan.py  resolve.py
src/pxygen/: __init__.py  __main__.py  cli.py  i18n.py  logging_utils.py  modes.py  organize.py  paths.py  plan.py  presenter.py  preview.py  resolve.py  server.py  table_output.py
src/pxygen/static/: index.html
tasks/: lessons.md  todo.md
tests/: conftest.py  test_cli.py  test_i18n.py  test_modes.py  test_organize.py  test_paths.py  test_presenter.py  test_preview.py  test_pure_logic.py  test_resolve_flow.py  test_resolve_pure.py  test_table_output.py
tests/fixtures/: fcmp_20260713_171439.json
