[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pxygen"
version = "1.5.2"
description = "Automates proxy generation for DaVinci Resolve"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
pxygen = "pxygen.cli:main"
proxy-generator = "pxygen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pxygen"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.uv]
python-preference = "only-system"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
